--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: adidasFont;
-    src: url('/Proyecto-Scaloneta/assets/AdidasFont.ttf');
-}
-
 *{
     margin: 5px;
     color: aliceblue;
@@ -11,7 +6,7 @@
 
 h1 {
     border: black 2px solid;
-    font-family: 'adidasFont';
+    font-family: 'Exo', sans-serif;
     text-align: center;
     font-size: 3.5vw;
     background-color: rgb(91, 155, 252);
