--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ h1 {
   font-size: 3.5vw;
   background-color: rgb(91, 155, 252);
   color: aliceblue;
+  transition: ease-in 1s;
+}
+
+h1:hover{
+  background-color: aliceblue;
+  color: rgb(91, 155, 252);
+  transition: ease-in 1s;
 }
 
 h2 {
@@ -19,14 +26,7 @@ h2 {
 
 header {
   border: 2px black solid; /*........Borrar linea al finalizar*/
-  transition: ease-in 2s;
   width: 100%;
-  margin: auto;
-}
-
-header:hover {
-  width: 80%;
-  transition: ease-out 1s;
   margin: auto;
 }
 
