--- a/style.css
+++ b/style.css
@@ -1,38 +1,39 @@
 * {
-/* Saque los margins y border radius para el footer (ver si se pone separadamente en cada section */
+  /* Saque los margins y border radius para el footer (ver si se pone separadamente en cada section */
   color: aliceblue;
   margin: 0px;
 }
 
 h1 {
-  border: black 2px solid; /*........Borrar linea al finalizar*/
   font-family: "Exo", sans-serif;
   text-align: center;
   font-size: 3.5vw;
   background-color: rgb(91, 155, 252);
   color: aliceblue;
+  transition: ease-out 1s;
+}
+
+h1:hover {
+  background-color: aliceblue;
+  color: rgb(91, 155, 252);
+  transition: ease-in 1s;
 }
 
 h2 {
   font-family: "Exo", sans-serif;
 }
 
-header {
-  border: 2px black solid; /*........Borrar linea al finalizar*/
-  transition: ease-in 2s;
-  width: 100%;
-  margin: auto;
+h3 {
+  font-family: "Exo", sans-serif;
 }
 
-header:hover {
-  width: 80%;
-  transition: ease-out 1s;
+header {
+  /*........Borrar linea al finalizar*/
   margin: auto;
 }
 
 nav {
-  border: 2px black solid; /*........Borrar linea al finalizar*/
-  background-color: rgb(91, 155, 252);
+  background-color: rgb(126, 178, 255);
 
   color: aliceblue;
   font-size: x-large;
@@ -43,32 +44,30 @@ nav {
 }
 
 main {
-  border: 2px black solid;
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: row;
 }
 
 .secciones {
-  border: 2px black solid; /*........Borrar linea al finalizar*/
-  width: 70%;
+  width: 75%;
+  border: rgb(132, 181, 255) 1px solid;
+  background-color: rgb(152, 193, 255);
 }
 
 aside {
-  border: 2px black solid; /*........Borrar linea al finalizar*/
-  background-color: rgb(91, 155, 252);
-  width: 30%;
+  background-color: rgb(116, 172, 255);
+  width: 25%;
   padding: 10px;
   text-align: center;
+  border: rgb(132, 181, 255) 1px solid;
 }
 
 .maindiv1 {
-  border: 2px black solid; /*........Borrar linea al finalizar*/
-  background-color: rgb(91, 155, 252);
   padding: 10px;
 }
 
-footer{
+footer {
   margin: 0px;
   padding: 0px;
   background-color: #1d2d49;
@@ -77,31 +76,29 @@ footer{
   flex-direction: column;
   justify-content: space-evenly;
 }
-.foot1{
+.foot1 {
   text-align: center;
   margin: 15px;
   font-weight: bold;
 }
-.socialMedia{
+.socialMedia {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
-.fa-brands:hover{
+.fa-brands:hover {
   animation: changeColor 0.6s linear 0s 1 normal forwards running;
-
-  
-  
 }
 @keyframes changeColor {
-  from {opacity: 1}
-  to {opacity: 0.3}
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.3;
+  }
 }
 
 .fa-brands {
   font-size: 2em;
   margin: 15px;
 }
-
-
-
