--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
   /* Saque los margins y border radius para el footer (ver si se pone separadamente en cada section */
-  color: aliceblue;
-  margin: 0px;
+    margin: 0px;
 }
 
 h1 {
@@ -28,13 +27,12 @@ h3 {
 }
 
 header {
-  /*........Borrar linea al finalizar*/
   margin: auto;
 }
 
 nav {
   background-color: rgb(126, 178, 255);
-
+  
   color: aliceblue;
   font-size: x-large;
   font-family: "Exo", sans-serif;
@@ -43,33 +41,59 @@ nav {
   justify-content: space-evenly;
 }
 
+nav a{
+  color: aliceblue;
+}
+
+.carrousel{
+  width: 100%;
+  max-height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  overflow: hidden; 
+}
+
+.carrousel img{
+  width: 100%;
+}
+
+
 main {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
-  flex-direction: row;
+  flex-direction: row; /*Una FILA con marco y aside*/
 }
 
-.secciones {
+.seccion {
   width: 75%;
+  color: #1d2d49;
   border: rgb(132, 181, 255) 1px solid;
-  background-color: rgb(152, 193, 255);
+  background-color: aliceblue;
+}
+
+.maindiv1 {
+  padding: 10px;
+  padding-left: 10%;
+  padding-right: 10%;
+  border: #491d1d solid 2px;
 }
 
 aside {
-  background-color: rgb(116, 172, 255);
+  background-color: rgb(152, 193, 255);
+  color: aliceblue;
   width: 25%;
   padding: 10px;
   text-align: center;
   border: rgb(132, 181, 255) 1px solid;
 }
 
-.maindiv1 {
-  padding: 10px;
-}
+
 
 footer {
   margin: 0px;
   padding: 0px;
+  color: aliceblue;
   background-color: #1d2d49;
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
@@ -99,6 +123,7 @@ footer {
 }
 
 .fa-brands {
+  color: aliceblue;
   font-size: 2em;
   margin: 15px;
 }
