--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav {
   background-color: rgb(126, 178, 255);
 
   color: aliceblue;
-  font-size: large;
+  font-size: x-large;
   font-family: "Exo", sans-serif;
   /*esto es para cuando se achica demasiado la pagina y se hacen dos renglones, que quede centrado*/
   text-align: center;
