--- a/style.css
+++ b/style.css
@@ -113,6 +113,9 @@ aside {
   padding: 3%;
   text-align: center;
   border: rgb(132, 181, 255) 1px solid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 aside p{
