--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ aside {
   background-color: rgb(152, 193, 255);
   color: aliceblue;
   width: 25vw;
+  height: 750px;
   padding: 3%;
   text-align: center;
   border: rgb(132, 181, 255) 1px solid;
