--- a/style.css
+++ b/style.css
@@ -39,10 +39,6 @@ h3 {
   font-family: "Exo", sans-serif;
 }
 
-header {
-  margin: auto;
-}
-
 nav {
   background-color: rgb(126, 178, 255);
   color: aliceblue;
@@ -52,6 +48,9 @@ nav {
   text-align: center;
   display: flex;
   justify-content: space-evenly;
+  
+  position: sticky;
+  top: 0px;
 }
 
 nav a {
